--- a/servicios.css
+++ b/servicios.css
@@ -7,11 +7,12 @@ header {
     justify-content: space-between;
     background-color: #f5f5f5;
     border-bottom: 2px solid black;
+    padding: 10px
 }
 
 .logo img {
     margin-top: 8px;
-    width: 40px;
+    width: 45px;
     margin-left: 30px;
 }
 
@@ -33,12 +34,14 @@ h1{
     padding-left: 150px;
     color: #f5f5f5;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
 }
 h2{
     background-color: #f5f5f5;
     margin-top: 20px;
     padding: 5px;
     border-radius: 10px;
+    font-size: 35px;
 }
 .titulo{
     padding: 20px;
@@ -51,17 +54,19 @@ h2{
     margin-right: 100px;
 }
 button{
-    padding: 10px 20px;
+    padding: 20px;
     margin-left: 10px; 
     background-color: #7BC043;
     border-radius: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 .subtitulo{
     display: flex;
     justify-content: space-between;
     margin-left: 210px;
     margin-right: 210px;
+    margin-top: 50px;
 }
 body{
     background-image: url("Imágenes/fondoE.jpg");
@@ -83,11 +88,12 @@ p{
     margin-left: 20px; 
     border-radius: 10px; 
     text-align: center;  
+    font-size: 30px;
 }
 
 
 footer{
-    margin-top: 23.1%;
+    margin-top: 8%;
 }
 .footer-contenido {
     display: flex;
@@ -115,9 +121,7 @@ footer{
     width: 30px;
     height: auto;
 }
-.contenido_p{
-    flex: 1;
-}
+
 
 
 
